<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_news"/>
        <item
                android:id="@+id/nav_campus"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_campus"/>
        <item
                android:id="@+id/nav_institute"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_institute"/>

        <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_chat"/>

    </group>

    <group
            android:id="@+id/other_group"
            android:checkableBehavior="single">

        <item
                android:id="@+id/nav_options"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_options"/>

        <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_feedback"/>

        <item
                android:id="@+id/nav_imprint"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_imprint"/>

    </group>
</menu>