<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_news">

    <fragment
            android:id="@+id/nav_news"
            android:name="com.example.informationappjava.ui.home.HomeFragment"
            android:label="@string/menu_news"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_campus"
            android:name="com.example.informationappjava.ui.gallery.GalleryFragment"
            android:label="@string/menu_campus"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_institute"
            android:name="com.example.informationappjava.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_institute"
            tools:layout="@layout/fragment_slideshow"/>

    <fragment
            android:id="@+id/nav_chat"
            android:name="com.example.informationappjava.ui.ChatFragment"
            android:label="@string/menu_chat"
            tools:layout="@layout/fragment_chat"/>
</navigation>