<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.chat.login.LoginActivity">

    <ProgressBar
      android:id="@+id/loading"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginStart="32dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="64dp"/>

  <ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="100dp">

      <EditText
        android:id="@+id/jid_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_jid"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_gravity="center_horizontal"/>

      <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_gravity="center_horizontal"/>

      <Button
        android:id="@+id/login"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:layout_gravity="center_horizontal"
        android:textColor="#fff"/>

    </LinearLayout>

  </ScrollView>

</LinearLayout>