<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.chat.contactdetails.ContactDetailsActivity">

  <ImageView
    android:id="@+id/contact_details_user_profile"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/ic_baseline_person_24"
    android:layout_centerHorizontal="true"/>

  <androidx.cardview.widget.CardView
    android:id="@+id/subscription_check_boxes"
    android:layout_below="@+id/contact_details_user_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <LinearLayout
        android:id="@+id/from_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
          android:id="@+id/them_to_me"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/onstatthem"
          android:layout_marginEnd="20dp"/>

        <TextView
          android:id="@+id/pending_from"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/pending_bg"
          android:text="@string/pending"
          android:visibility="gone"/>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/to_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
          android:id="@+id/me_to_them"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/onstattheir"
          android:layout_marginEnd="20dp"/>

        <TextView
          android:id="@+id/pending_to"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/pending_bg"
          android:visibility="gone"/>

      </LinearLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

</RelativeLayout>