<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="24dp"
  android:background="?attr/backgroundcolor">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundcolor"
        app:cardBackgroundColor="?attr/cardbackground">


      </androidx.cardview.widget.CardView>


      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="?attr/cardbackground">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:padding="10dp">

          <TextView
            android:id="@+id/cMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_enable"
            android:textColor="?attr/textcolor"
            android:textStyle="bold"/>

          <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/myswitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:text="@string/settings_dark"/>



        </LinearLayout>

      </androidx.cardview.widget.CardView>


      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundcolor"
        app:cardBackgroundColor="?attr/cardbackground"
        android:layout_marginTop="8dp"
        android:textColor="?attr/textcolor"
        >

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:padding="10dp">



          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/language"
            android:text="@string/settings_language">

          </Button>

        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:padding="10dp">

          <com.mahfa.dnswitch.DayNightSwitch
            android:id="@+id/dayNight"
            android:layout_width="80dp"
            android:layout_height="40dp"/>

        </LinearLayout>


      </androidx.cardview.widget.CardView>

    </LinearLayout>

  </ScrollView>


</LinearLayout>
